# VilsSharpX

./: .gitignore  App.xaml  App.xaml.cs  AppSettings.cs  AviRecorder.cs  AviSourcePlayer.cs  AviUncompressedVideoReader.cs  AvtpEthernetSender.cs  AvtpLiveCapture.cs  AvtpPacketBuilder.cs  AvtpRvfParser.cs  AvtpRvfTransmitter.cs  AvtpTransmitManager.cs  BitmapUtils.cs  DarkPixelCompensation.cs  DiagnosticLogger.cs  DiffRenderer.cs  FrameSnapshotSaver.cs  ImageUtils.cs  LiveCaptureManager.cs  LiveNicSelector.cs  LsmDeviceType.cs  LvdsCookedFrameReceiver.cs  LvdsCrc.cs  LvdsFrameReassembler.cs  LvdsLiveManager.cs  LvdsProtocol.cs  LvdsSimulatedSource.cs  LvdsUartCapture.cs  MainWindow.xaml  MainWindow.xaml.cs  NetworkInterfaceUtils.cs  NichiaEthCapture.cs  OsramEthCapture.cs  OverlayRenderer.cs  PcapAvtpRvfReplay.cs  PgmLoader.cs  PicoUsbVendor.cs  PixelInspector.cs  PlaybackStateManager.cs  (+15 more)
.githooks/: pre-commit
.github/: copilot-instructions.md
Aurix_Firmware/: BUILD_INSTRUCTIONS.md  CODE_STATUS.md  COMPLETION_CHECKLIST.md  Cpu0_Main.c  DMA_DUAL_BUFFER_DESIGN.md  FILE_MANIFEST.md  HANDOFF_SUMMARY.md  STEP1_BUILD_VALIDATE.md  asclin9_dma.c  asclin9_dma.h  asclin9_rx.c  asclin9_rx.h  asclin9_rx_dma.h  device_mode.c  device_mode.h  dma_sanity.c  dma_sanity.h  frame_eth.c  frame_eth.h  nichia_eth.c  nichia_eth.h  osram_crc32.c  osram_crc32.h  osram_frame.c  osram_frame.h  rx_crc.c  rxmon.c  rxmon.h  trap_diag.c  trap_diag.h
docs/: PROJECT_STATUS.md
firmware/pico2-lvds-bridge/: CMakeLists.txt  README.md  main.c  tusb_config.h  uart_rx.pio  usb_descriptors.c
(+66 files in other folders)
